--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!doctype html>
+<html lang="pt-br">
+<html>
+  <head>
+    <meta charset>
+    <meta html>
+    <meta name>
+    <title> Elementos vistos em sala</title>
+    <body>
+      <h1> Hiper text markup language</h1>
+<p1> Hipertexto é quando tem um texto e uma área em que você</p1>
+    </body>
+  </head>
+</html>
