--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset>
     <meta html>
     <meta name>
-    <title> Elementos vistos em sala</title>
+    <title> Gustavo Fernandes Silva </title>
     <body>
       <h1> Hiper text markup language</h1>
-<p1> Hipertexto é quando tem um texto e uma área em que você</p1>
+<p1> Hipertexto é quando tem um texto e uma área em que você pode clicar e ele vai para este texto, podendo ser imagens, e basicamente é onde você clica em uma área e ela te leva em outra </p1>
+      <h2>Como salvar uma imagem corretamente</h2>
+      <p2> Salvar o arquivo</p2>
     </body>
   </head>
 </html>
