--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1> Hiper text markup language</h1>
 <p1> Hipertexto é quando tem um texto e uma área em que você pode clicar e ele vai para este texto, podendo ser imagens, e basicamente é onde você clica em uma área e ela te leva em outra </p1>
       <h2>Como salvar uma imagem corretamente</h2>
-      <p2> Salvar o arquivo</p2>
+      <p2> Salvar o arquivo de imagem sempre no formato jpg e png, e colocar o nome do arquivo de maneira que sseja facil a identificação de seus conteúdos</p2>
     </body>
   </head>
 </html>
