--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name>
    <audio preload="metadata" controls autoplay loop>
      <source src="audio.mp3" type"=audio">
+      <a href="" download>Download Arquivo ZIP</a>
    </audio>
     </body>
   </head>
