--- a/index.html
+++ b/index.html
@@ -9,6 +9,35 @@
      <source src="audio.mp3" type"=audio">
       <a href="videomeu.mp4" download>video</a>
    </audio>
+<div class="container">
+        <header>
+            <h1>iPhone 8 Plus</h1>
+            <p>Descubra tudo sobre o iPhone 8 Plus</p>
+        </header>
+
+        <section>
+            <h2>Design Elegante</h2>
+            <img src="iphone-8-plus-design.jpg" alt="Design do iPhone 8 Plus">
+            <p>O iPhone 8 Plus apresenta um design elegante em vidro e alumínio, disponível em diversas cores sofisticadas.</p>
+        </section>
+
+        <section>
+            <h2>Câmera Incrível</h2>
+            <img src="iphone-8-plus-camera.jpg" alt="Câmera do iPhone 8 Plus">
+            <p>Com uma câmera de 12 MP, o iPhone 8 Plus captura fotos deslumbrantes com qualidade profissional.</p>
+        </section>
+
+        <section>
+            <h2>Desempenho Potente</h2>
+            <img src="iphone-8-plus-performance.jpg" alt="Desempenho do iPhone 8 Plus">
+            <p>Equipado com o chip A11 Bionic, o iPhone 8 Plus oferece um desempenho excepcional para todas as suas necessidades.</p>
+        </section>
+
+        <footer>
+            <p>&copy; 2024 iPhone 8 Plus - Todos os direitos reservados.</p>
+        </footer>
+    </div>
+    
     </body>
   </head>
 </html>
