--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!doctype html>
+
 <html lang="pt-br">
-<html>
-  <head>
-    <meta charset>
-    <meta html>
-    <meta name>
-   <audio preload="metadata" controls autoplay loop>
-     <source src="audio.mp3" type"=audio">
-      <a href="videomeu.mp4" download>video</a>
-   </audio>
-<div class="container">
-        <header>
-            <h1>iPhone 8 Plus</h1>
-            <p>Descubra tudo sobre o iPhone 8 Plus</p>
-        </header>
 
-        <section>
-            <h2>Design Elegante</h2>
-            <p>O iPhone 8 Plus apresenta um design elegante em vidro e alumínio, disponível em diversas cores sofisticadas.</p>
-        </section>
+<head>
 
-        <section>
-            <h2>Câmera Incrível</h2>
-            <p>Com uma câmera de 12 MP, o iPhone 8 Plus captura fotos deslumbrantes com qualidade profissional.</p>
-        </section>
+<meta charset="UTF-8">
 
-        <section>
-            <h2>Desempenho Potente</h2>
-            <p>Equipado com o chip A11 Bionic, o iPhone 8 Plus oferece um desempenho excepcional para todas as suas necessidades.</p>
-        </section>
+<title> atividade css </title>
 
-        <footer>
-        </footer>
-    </div>
-    
-    </body>
-  </head>
+<link rel="stylesheet" href= "estilo.css">
+
+</head>
+
+<body>
+
+<h1>
+
+Título
+
+</h1>
+
+<div id="item">Contéudo 1</div>
+
+<div id="item2">Contéudo 2</div>
+
+<p> Parágrafo 1 </p>
+
+<img src="imgg.jpg" alt="imagem do boca e do ney"">
+
+</body>
+
 </html>
