--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Título
 
 <p> Parágrafo 1 </p>
 
-<img src="imgg.jpg" alt="imagem do boca e do ney"">
+<img src="imgg.jpg" alt="imagem do vini jr"">
 
 </body>
 
