--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Título
 
 <p> Parágrafo 1 </p>
 
-<img src="imgg.jpg" alt="imagem macaco"">
+<img src="macaco.jpg" alt="imagem macaco"">
 
 </body>
 
